fixing border alignment of my username on leaderboard

--- a/src/app/main/components/leaderboard/leaderboard.component.scss
+++ b/src/app/main/components/leaderboard/leaderboard.component.scss
@@ -15,5 +15,5 @@
     font-size: 16px !important;
 }
 :host ::ng-deep .alignMyPosition {
-    padding-bottom: 21px !important;
+    padding-bottom: 25px !important;
 }
